k8s/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: fastapi

spec:
  replicas: 1

  selector:
    matchLabels:
      app: fastapi

  template:
    metadata:
      labels:
        app: fastapi

    spec:
      containers:
      - name: fastapi

        image: alien00784400/fastapi-customer-service:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 8000

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "256Mi"

        volumeMounts:
        - name: logs-volume
          mountPath: /app/logs

        readinessProbe:
          httpGet:
            path: /customer2
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3

        livenessProbe:
          httpGet:
            path: /customer2
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3

      volumes:
      - name: logs-volume
        persistentVolumeClaim:
          claimName: logs-pvc
