k8s/fastapi-development.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi

spec:
  replicas: 1

  selector:
    matchLabels:
      app: fastapi

  template:
    metadata:
      labels:
        app: fastapi

    spec:
      containers:
      - name: fastapi

        image: alien00784400/fastapi-customer-service:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 8000
